Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UPrimitiveComponent.h

	DOTNET_EXPORT auto E_UPrimitiveComponent_GetClosestPointOnCollision(UPrimitiveComponent* Self, INT_PTR Point, INT_PTR OutPointOnBody, char* BoneName)
	{
		auto& _p0 = *(FVector*)Point;
		auto& _p1 = *(FVector*)OutPointOnBody;
		auto _p2 = ConvertFromManage_FName(BoneName);
		return Self->GetClosestPointOnCollision(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetCollisionProfileName(UPrimitiveComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetCollisionProfileName());
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetDiffuseBoost(UPrimitiveComponent* Self, int32 ElementIndex)
	{
		auto _p0 = ElementIndex;
		return Self->GetDiffuseBoost(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetDistanceToCollision(UPrimitiveComponent* Self, INT_PTR Point, INT_PTR ClosestPointOnCollision)
	{
		auto& _p0 = *(FVector*)Point;
		auto& _p1 = *(FVector*)ClosestPointOnCollision;
		return Self->GetDistanceToCollision(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetEmissiveBoost(UPrimitiveComponent* Self, int32 ElementIndex)
	{
		auto _p0 = ElementIndex;
		return Self->GetEmissiveBoost(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetGenerateOverlapEvents(UPrimitiveComponent* Self)
	{
		return Self->GetGenerateOverlapEvents();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetInertiaTensor(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return (INT_PTR) new FVector(Self->GetInertiaTensor(_p0));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetLightAndShadowMapMemoryUsage(UPrimitiveComponent* Self, int32 LightMapMemoryUsage, int32 ShadowMapMemoryUsage)
	{
		auto& _p0 = LightMapMemoryUsage;
		auto& _p1 = ShadowMapMemoryUsage;
		Self->GetLightAndShadowMapMemoryUsage(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetLightMapResolution(UPrimitiveComponent* Self, int32 Width, int32 Height)
	{
		auto& _p0 = Width;
		auto& _p1 = Height;
		return Self->GetLightMapResolution(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetLinearDamping(UPrimitiveComponent* Self)
	{
		return Self->GetLinearDamping();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetLODParentPrimitive(UPrimitiveComponent* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetLODParentPrimitive());
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetMass(UPrimitiveComponent* Self)
	{
		return Self->GetMass();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetMassScale(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->GetMassScale(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetMoveIgnoreActors(UPrimitiveComponent* Self)
	{
		return ConvertToManage_TemplatePointerDescription(Self->GetMoveIgnoreActors());
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetMoveIgnoreComponents(UPrimitiveComponent* Self)
	{
		return ConvertToManage_TemplatePointerDescription(Self->GetMoveIgnoreComponents());
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetNumMaterials(UPrimitiveComponent* Self)
	{
		return Self->GetNumMaterials();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetOverlapInfos(UPrimitiveComponent* Self)
	{
		return ConvertToManage_TemplatePointerDescription(Self->GetOverlapInfos());
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetOverlappingComponents(UPrimitiveComponent* Self, INT_PTR OutOverlappingComponents)
	{
		auto& _p0 = *(TArray<UPrimitiveComponent*>*)OutOverlappingComponents;
		Self->GetOverlappingComponents(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetOverlapsWithActor(UPrimitiveComponent* Self, AActor* Actor, INT_PTR OutOverlaps)
	{
		auto _p0 = Actor;
		auto& _p1 = *(TArray<FOverlapInfo>*)OutOverlaps;
		return Self->GetOverlapsWithActor(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetPhysicsAngularVelocity(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return (INT_PTR) new FVector(Self->GetPhysicsAngularVelocity(_p0));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetPhysicsAngularVelocityInDegrees(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return (INT_PTR) new FVector(Self->GetPhysicsAngularVelocityInDegrees(_p0));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetPhysicsAngularVelocityInRadians(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return (INT_PTR) new FVector(Self->GetPhysicsAngularVelocityInRadians(_p0));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetPhysicsLinearVelocity(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return (INT_PTR) new FVector(Self->GetPhysicsLinearVelocity(_p0));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetPhysicsLinearVelocityAtPoint(UPrimitiveComponent* Self, INT_PTR Point, char* BoneName)
	{
		auto _p0 = *(FVector*)Point;
		auto _p1 = ConvertFromManage_FName(BoneName);
		return (INT_PTR) new FVector(Self->GetPhysicsLinearVelocityAtPoint(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetRigidBodyState(UPrimitiveComponent* Self, INT_PTR OutState, char* BoneName)
	{
		auto& _p0 = *(FRigidBodyState*)OutState;
		auto _p1 = ConvertFromManage_FName(BoneName);
		return Self->GetRigidBodyState(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetShadowIndirectOnly(UPrimitiveComponent* Self)
	{
		return Self->GetShadowIndirectOnly();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetSquaredDistanceToCollision(UPrimitiveComponent* Self, INT_PTR Point, float OutSquaredDistance, INT_PTR OutClosestPointOnCollision)
	{
		auto& _p0 = *(FVector*)Point;
		auto& _p1 = OutSquaredDistance;
		auto& _p2 = *(FVector*)OutClosestPointOnCollision;
		return Self->GetSquaredDistanceToCollision(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetStaticDepthPriorityGroup(UPrimitiveComponent* Self)
	{
		return Self->GetStaticDepthPriorityGroup();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetStaticLightMapResolution(UPrimitiveComponent* Self)
	{
		return Self->GetStaticLightMapResolution();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_HasStaticLighting(UPrimitiveComponent* Self)
	{
		return Self->HasStaticLighting();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_HasValidSettingsForStaticLighting(UPrimitiveComponent* Self, bool bOverlookInvalidComponents)
	{
		auto _p0 = bOverlookInvalidComponents;
		return Self->HasValidSettingsForStaticLighting(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IgnoreActorWhenMoving(UPrimitiveComponent* Self, AActor* Actor, bool bShouldIgnore)
	{
		auto _p0 = Actor;
		auto _p1 = bShouldIgnore;
		Self->IgnoreActorWhenMoving(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IgnoreComponentWhenMoving(UPrimitiveComponent* Self, UPrimitiveComponent* Component, bool bShouldIgnore)
	{
		auto _p0 = Component;
		auto _p1 = bShouldIgnore;
		Self->IgnoreComponentWhenMoving(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsAnyRigidBodyAwake(UPrimitiveComponent* Self)
	{
		return Self->IsAnyRigidBodyAwake();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsAttachedToStreamingManager(UPrimitiveComponent* Self)
	{
		return Self->IsAttachedToStreamingManager();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsComponentIndividuallySelected(UPrimitiveComponent* Self)
	{
		return Self->IsComponentIndividuallySelected();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsGravityEnabled(UPrimitiveComponent* Self)
	{
		return Self->IsGravityEnabled();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsOverlappingActor(UPrimitiveComponent* Self, AActor* Other)
	{
		auto _p0 = Other;
		return Self->IsOverlappingActor(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsOverlappingComponent(UPrimitiveComponent* Self, UPrimitiveComponent* OtherComp)
	{
		auto _p0 = OtherComp;
		return Self->IsOverlappingComponent(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsOverlappingComponent_o1(UPrimitiveComponent* Self, INT_PTR Overlap)
	{
		auto& _p0 = *(FOverlapInfo*)Overlap;
		return Self->IsOverlappingComponent(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsPostPhysicsComponentTickEnabled(UPrimitiveComponent* Self)
	{
		return Self->IsPostPhysicsComponentTickEnabled();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsWelded(UPrimitiveComponent* Self)
	{
		return Self->IsWelded();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsZeroExtent(UPrimitiveComponent* Self)
	{
		return Self->IsZeroExtent();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_K2_BoxOverlapComponent(UPrimitiveComponent* Self, INT_PTR InBoxCentre, INT_PTR InBox, bool bTraceComplex, bool bShowTrace, bool bPersistentShowTrace, INT_PTR HitLocation, INT_PTR HitNormal, char* BoneName, INT_PTR OutHit)
	{
		auto _p0 = *(FVector*)InBoxCentre;
		auto _p1 = *(FBox*)InBox;
		auto _p2 = bTraceComplex;
		auto _p3 = bShowTrace;
		auto _p4 = bPersistentShowTrace;
		auto& _p5 = *(FVector*)HitLocation;
		auto& _p6 = *(FVector*)HitNormal;
		auto _p7 = ConvertFromManage_FName(BoneName);
		auto& _p8 = *(FHitResult*)OutHit;
		return Self->K2_BoxOverlapComponent(_p0, _p1, _p2, _p3, _p4, _p5, _p6, _p7, _p8);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_K2_IsCollisionEnabled(UPrimitiveComponent* Self)
	{
		return Self->K2_IsCollisionEnabled();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_K2_IsPhysicsCollisionEnabled(UPrimitiveComponent* Self)
	{
		return Self->K2_IsPhysicsCollisionEnabled();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_K2_IsQueryCollisionEnabled(UPrimitiveComponent* Self)
	{
		return Self->K2_IsQueryCollisionEnabled();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_K2_LineTraceComponent(UPrimitiveComponent* Self, INT_PTR TraceStart, INT_PTR TraceEnd, bool bTraceComplex, bool bShowTrace, bool bPersistentShowTrace, INT_PTR HitLocation, INT_PTR HitNormal, char* BoneName, INT_PTR OutHit)
	{
		auto _p0 = *(FVector*)TraceStart;
		auto _p1 = *(FVector*)TraceEnd;
		auto _p2 = bTraceComplex;
		auto _p3 = bShowTrace;
		auto _p4 = bPersistentShowTrace;
		auto& _p5 = *(FVector*)HitLocation;
		auto& _p6 = *(FVector*)HitNormal;
		auto _p7 = ConvertFromManage_FName(BoneName);
		auto& _p8 = *(FHitResult*)OutHit;
		return Self->K2_LineTraceComponent(_p0, _p1, _p2, _p3, _p4, _p5, _p6, _p7, _p8);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_K2_SphereOverlapComponent(UPrimitiveComponent* Self, INT_PTR InSphereCentre, float InSphereRadius, bool bTraceComplex, bool bShowTrace, bool bPersistentShowTrace, INT_PTR HitLocation, INT_PTR HitNormal, char* BoneName, INT_PTR OutHit)
	{
		auto _p0 = *(FVector*)InSphereCentre;
		auto _p1 = InSphereRadius;
		auto _p2 = bTraceComplex;
		auto _p3 = bShowTrace;
		auto _p4 = bPersistentShowTrace;
		auto& _p5 = *(FVector*)HitLocation;
		auto& _p6 = *(FVector*)HitNormal;
		auto _p7 = ConvertFromManage_FName(BoneName);
		auto& _p8 = *(FHitResult*)OutHit;
		return Self->K2_SphereOverlapComponent(_p0, _p1, _p2, _p3, _p4, _p5, _p6, _p7, _p8);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_K2_SphereTraceComponent(UPrimitiveComponent* Self, INT_PTR TraceStart, INT_PTR TraceEnd, float SphereRadius, bool bTraceComplex, bool bShowTrace, bool bPersistentShowTrace, INT_PTR HitLocation, INT_PTR HitNormal, char* BoneName, INT_PTR OutHit)
	{
		auto _p0 = *(FVector*)TraceStart;
		auto _p1 = *(FVector*)TraceEnd;
		auto _p2 = SphereRadius;
		auto _p3 = bTraceComplex;
		auto _p4 = bShowTrace;
		auto _p5 = bPersistentShowTrace;
		auto& _p6 = *(FVector*)HitLocation;
		auto& _p7 = *(FVector*)HitNormal;
		auto _p8 = ConvertFromManage_FName(BoneName);
		auto& _p9 = *(FHitResult*)OutHit;
		return Self->K2_SphereTraceComponent(_p0, _p1, _p2, _p3, _p4, _p5, _p6, _p7, _p8, _p9);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_OnComponentCollisionSettingsChanged(UPrimitiveComponent* Self)
	{
		((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->OnComponentCollisionSettingsChanged_WRAP();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PushHoveredToProxy(UPrimitiveComponent* Self, bool bInHovered)
	{
		auto _p0 = bInHovered;
		Self->PushHoveredToProxy(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PushSelectionToProxy(UPrimitiveComponent* Self)
	{
		Self->PushSelectionToProxy();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PutAllRigidBodiesToSleep(UPrimitiveComponent* Self)
	{
		Self->PutAllRigidBodiesToSleep();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PutRigidBodyToSleep(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		Self->PutRigidBodyToSleep(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_RigidBodyIsAwake(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->RigidBodyIsAwake(_p0);
	}